src/app/globals.css
/* ... */
/**
 * responsive for large than 768px screen
 */

@media (min-width: 768px) {

  /**
   * CUSTOM PROPERTY
   */

  :root {

    /**
     * typography
     */

    --fs-1: 7rem;
    --fs-2: 4rem;
    --fs-4: 3.5rem;

  }



  /**
   * REUSED STYLE
   */
   

  .container { max-width: 720px; }

  .btn { padding: 16px 32px; font-size: 1.5rem; }

  .section-text.text-center {
    font-size: 1.5rem;
    max-width: 50ch;
    margin-inline: auto;
  }

  .btn-link { --fs-12: 1.4rem; }



  /**
   * HERO
   */

  .hero-subtitle { --fs-12: 1.4rem; }



  /**
   * FEATURES
   */

  .features .grid-list { grid-template-columns: 1fr 1fr; }



  /**
   * FOOTER
   */

  .footer-top .container { grid-template-columns: 1fr 1fr; }

}




/**
 * responsive for large than 992px screen
 */

@media (min-width: 992px) {

  /**
   * REUSED STYLE
   */

  .container { max-width: 960px; }

  /**
   * HEADER
   */

  .nav-open-btn,
  .navbar .wrapper,
  .overlay { display: none; }


  .navbar,
  .navbar.active { all: unset; }

  .navbar-list {
    display: flex;
    gap: 40px;
  }

  .navbar-link {
    color: var(--rich-black-fogra-29-1);
    font-weight: var(--fw-500);
    padding-block: 0;
    position: relative;
  }
  
  .navbar-link:before {
    background-color: var(--go-green);
    border-radius: 5px;
    bottom: -2px; 
    content: "";
    height: 4px;
    left: 0;
    position: absolute;
    transition: width 0.25s ease; 
    width: 0;
  }
  
  .navbar-link:hover:before {
    width: 100%;
  }
  

  /**
   * HERO
   */

  .hero { text-align: left; }

  .hero .container {
    grid-template-columns: 1fr 0.7fr;
    align-items: center;
  }

  .hero-subtitle { margin-inline: 25px 0; }

  .hero .btn-group { justify-content: flex-start; }



  /**
   * ABOUT
   */

  .about .container {
    grid-template-columns: 1fr 1fr;
    align-items: center;
  }



  /**
   * SERVICE
   */

  .service-card {
    display: flex;
    align-items: flex-start;
    gap: 20px;
  }



  /**
   * FEATURES
   */

  .features .grid-list { grid-template-columns: repeat(3, 1fr); }



  /**
   * FAQ
   */

  .faq .container {
    grid-template-columns: 0.48fr 1fr;
    align-items: flex-start;
  }



  /**
   * FOOTER
   */

  .footer-top .container { grid-template-columns: 1fr 0.8fr 0.8fr 1fr; }

  .footer-top{
    padding-bottom: 10px;
  }

  .footer-bottom .container {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .copyright { margin-block-end: 0; }

}




/**
 * responsive for large than 1200px screen
 */

@media (min-width: 1200px) {

  /**
   * CUSTOM PROPERTY
   */

  :root {

    /**
     * typography
     */

    --fs-1: 7.5rem;
    --fs-4: 3.8rem;

  }



  /**
   * REUSED STYLE
   */

  .container { max-width: 1140px; }

  .btn-link { --fs-12: 1.5rem; }



  /**
   * HERO
   */

  .hero {
    min-height: 100vh;
    display: grid;
    align-items: center;
  }



  /**
   * ABOUT
   */

  .about .container { grid-template-columns: 1fr 0.7fr; }



  /**
   * FAQ
   */

  .faq-card .card-action.active + .card-content { max-height: 200px; }

}

.bg-project-logo{
  background-color: var(--mint-cream);
}

@keyframes scrolling-images {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(-50%);
  }
}

.animate-scrolling-images {
  animation: scrolling-images 5s linear infinite;
}

